fix(result): change element spacing and $primary in demo

--- a/demo/src/styles.scss
+++ b/demo/src/styles.scss
@@ -2,7 +2,7 @@
 
 // @import '~bootstrap/scss/bootstrap';
 // $primary: #338FE5;
-
+$primary: #348fe4;
 $demo-toc-width: 200px;
 
 @import '../../src/styles/index.scss';
