--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -623,7 +623,9 @@ $list-grid-option-sm-name-margin-top: 7px;
 
 // result
 $result-padding: 30px !default;
-$result-title-font-size: $font-size-lg !default;
+$result-title-font-size: $font-size-xlg !default;
 $result-subtitle-color: $gray-600 !default;
-$result-extra-margin: 30px !default;
-$result-extra-item-margin: 8px !default;
+$result-extra-margin-top: 17px !default;
+$result-extra-item-margin: 6px !default;
+$result-title-margin-top: 30px !default;
+$result-subtitle-margin-top: 8px !default;
